--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -5,3 +5,7 @@ import { QuickStartCards } from "../components/SelectionCard";
 You can get started integrating with Leap through either our RESTful API or our native TypeScript/JavaScript SDK.
 
 <QuickStartCards />
+
+## Need Assistance?
+
+For queries or further assistance, kindly reach out via email at [help@tryleap.ai](mailto:help@tryleap.ai).
