--- a/pages/sdk/typescript-sdk.mdx
+++ b/pages/sdk/typescript-sdk.mdx
@@ -123,7 +123,7 @@ console.log(data);
 ```
 
 
-### Asyncronous Generation
+### Asynchronous Generation
 
 Depending on whether you're using a serverless backend (such as Next.js) or not, you may need to generate images asynchronously. 
 
