added under construction placeholders

--- a/pages/sdk/typescript-sdk.mdx
+++ b/pages/sdk/typescript-sdk.mdx
@@ -154,3 +154,18 @@ When using `createInferenceJob`, you will receive a response with the generation
 ```
 
 You can then use the `id` of the generation job to fetch the results later on. Or you can take advantage of our webhooks to receive a notification with the job payload when the generation job is complete.
+
+
+### Retrieving Images
+Under construction - coming soon!
+
+### Deleting Images
+Under construction - coming soon!
+
+## Training Models
+Under construction - coming soon!
+
+* Creating Custom Model
+* Uploading Image Samples
+* Training Custom Model
+* Generating Images with a Custom Model
