changed code to python

--- a/pages/authentication.mdx
+++ b/pages/authentication.mdx
@@ -10,7 +10,7 @@ From here, you can copy the `leap-api-key` and use it in your requests.
 
 Calling the API requires an API Key. You can pass the API Key as a Bearer token in the `Authorization` header:
 
-```bash copy
+```python copy
 import requests
 
 url = "https://api.tryleap.ai/api/v1/images/models/modelId/inferences"
