Update generating-music.mdx to change image to music

--- a/pages/sdk/generating-music.mdx
+++ b/pages/sdk/generating-music.mdx
@@ -9,7 +9,7 @@ import { internalLinks } from "../../utils/internal-links";
 
 ## Generating Music
 
-To generate an image simply call the `music.` method on your `Leap` instance. You must pass in a prompt, and set the duration. 
+To generate a music simply call the `music.` method on your `Leap` instance. You must pass in a prompt, and set the duration. 
 
 ```ts copy
   const { data, error } = await leap.music.submitMusicGenerationJob({
