added banana mention

--- a/pages/sdk/training-models.mdx
+++ b/pages/sdk/training-models.mdx
@@ -6,15 +6,17 @@ date: "2023-5-31"
 # Training Models
 Custom models enable you to teach AI about custom people, objects, or even styles that you want to generate.
 
-They allow you to go beyond the limitations of the public models. 
+This enables you to create avatars/headshots of real people, original art/styles, or even professional photography of products.
 
-The process for training a custom model is as follows:
-1. Create a model
-2. Upload image samples
-3. Train the model
-4. Generate images with the model
+import { Callout } from 'nextra/components'
 
-Custom models take the image samples you upload them, and learn about them in order to then be able to generate new images based on what they've learned.
+<Callout type="info" emoji="ℹ️">
+  We provide a high-level API for training image models, but If you're interested in further customization or deploying your own custom pipelines/models, we encourage you to check out [our partner Banana](https://www.banana.dev/?ref=leap-docs).
+</Callout>
+
+
+
+
 
 ## Creating Custom Model
 
