--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,10 +1,15 @@
-import { QuickStartCards } from "../components/IntroductionCards";
+import { IntroductionCards } from "../components/IntroductionCards";
+import { QuickStartCards } from "../components/QuickStartCards";
+
 import { ExampleBuilds } from "../components/SecondaryCards";
 
 # Introduction
 
 Learn how to use Leap to build powerful apps.
 
+<IntroductionCards />
+
+## Quickstart
 <QuickStartCards />
 
 ## Example Builds
