--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,5 +1,6 @@
 import { IntroductionCards } from "../components/IntroductionCards";
 import { QuickStartCards } from "../components/QuickStartCards";
+import { SDKCards } from "../components/SDKCards";
 
 import { ExampleBuilds } from "../components/SecondaryCards";
 
@@ -8,6 +9,7 @@ import { ExampleBuilds } from "../components/SecondaryCards";
 Learn how to use Leap to build powerful apps.
 
 <IntroductionCards />
+<SDKCards />
 
 ## Quickstart
 <QuickStartCards />
