fix internal link reference

--- a/pages/webhooks.mdx
+++ b/pages/webhooks.mdx
@@ -4,7 +4,7 @@ date: "2023-6-01"
 ---
 
 import { Tab, Tabs, Callout } from "nextra-theme-docs";
-import { internalLinks } from "../../utils/internal-links";
+import { internalLinks } from "../utils/internal-links";
 
 ## Webhooks
 
