--- a/pages/authentication.mdx
+++ b/pages/authentication.mdx
@@ -50,6 +50,6 @@ This will immediately revoke the API Key and any requests using that API Key wil
 
 ## Need Assistance?
 
-For queries or further assistance, kindly reach out via email at [help@tryleap.ai](mailto:help@tryleap.ai) or visit our [Support Page](https://www.leap.com/support).
+For queries or further assistance, kindly reach out via email at [help@tryleap.ai](mailto:help@tryleap.ai).
 
 Thank you for choosing Leap!
