--- a/pages/authentication.mdx
+++ b/pages/authentication.mdx
@@ -2,7 +2,7 @@
 
 In order to use our API you need to get your `leap-api-key` first. Create an account, log in, within a project, on the upper right corner click on `API Keys`.
 
-![](./images/api-keys.jpg)
+![](./images/api-keys.png)
 
 From here, you can copy the `leap-api-key` and use it in your requests.
 
@@ -50,6 +50,6 @@ This will immediately revoke the API Key and any requests using that API Key wil
 
 ## Need Assistance?
 
-For queries or further assistance, kindly reach out via email at [help@tryleap.ai](mailto:help@tryleap.ai).
+For queries or further assistance, kindly reach out via email at **[help@tryleap.ai](mailto:help@tryleap.ai)**.
 
 Thank you for choosing Leap!
