--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,7 +6,7 @@ import { ExampleBuilds } from "../components/SecondaryCards";
 
 # Introduction
 
-Learn how to use Leap to build powerful apps.
+Learn how to use Leap to **build powerful apps**.
 
 <IntroductionCards />
 <SDKCards />
